--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -40,3 +40,19 @@ body {
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
+
+.styles_modal__gNwvD {
+  /* max-width: 800px; */
+  padding: 50px;
+  position: relative;
+  padding: 1.2rem;
+  background: #ffffff;
+  background-clip: padding-box;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25);
+  margin: auto;
+}
+
+.recharts-wrapper {
+  width: 70% !important;
+  height: 70% !important;
+}
