--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -56,3 +56,10 @@ body {
   width: 70% !important;
   height: 70% !important;
 }
+
+.ant-row {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
