--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -125,3 +125,18 @@ body {
   content: "\E670";
   color: #931e2f !important;
 }
+
+.ant-upload.ant-upload-drag {
+  border: 1px dashed #d9d9d9;
+  -webkit-transition: border-color 0.3s;
+  -o-transition: border-color 0.3s;
+  transition: border-color 0.3s;
+  cursor: pointer;
+  border-radius: 4px;
+  text-align: center;
+  width: 100%;
+  height: 250px !important;
+  position: relative;
+  padding: 16px 0;
+  background: #fafafa;
+}
